plugins {
    id 'java'
    id 'org.springframework.boot' version '2.5.1'   // spring boot 3.0 -> 2.0 하향 (가비아서버 openJDK 17까지 지원하는 이슈 )
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-logging'

//    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'         //db connection lib
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'          // MyBatis starter 의존성 버전 하향 (spring )

    implementation group: 'commons-codec', name: 'commons-codec', version: '1.16.0'     // base64 encoding
    implementation 'org.mariadb.jdbc:mariadb-java-client'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'

    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
    implementation 'org.glassfish.jaxb:jaxb-runtime'
    implementation 'org.jboss.logging:jboss-logging'

    // openjdk 20->17 사용으로 추가한 의존 라이브러리
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api'
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.0'


    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'      // JUnit 포함됨
	
	implementation files("libs/test.jar")


//	developmentOnly 'org.springframework.boot:spring-boot-devtools'


}

tasks.named('test') {
    useJUnitPlatform()
}
